--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col">
-         <app-personajes [personajes]="personajes"></app-personajes>
+         <app-personajes></app-personajes>
     </div>
 
 
@@ -11,9 +11,7 @@
     
      <app-agregar
      [nuevo]="nuevo"
-     (oneNuevoPersonaje)="agregarNuevoPersonaje($event)"
      >
-
      </app-agregar>
 
         
